# mathesarpy

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-test-pypi.yml
src/commonspider_mathesarpy/: __init__.py  __main__.py  api.py  classes.py  client.py  exceptions.py  mathesar.py
tools/: build.py  generate.py  process_repo.py  scrape.py  settings_base.py
